# game_of_life

./: CMakeLists.txt  README.md  game_of_life.c
